Cloud-kubernetes-app-exercise/k8s/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: default
spec:
  selector:
    app: odoo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8069
  type: ClusterIP
